jtool changelog

--- 1.0.0   10/14/15 ---
Initial release!

--- 1.0.1   10/14/15 ---
Remove round()s when drawing player

--- 1.0.2   10/14/15 ---
Remove more unnecessary rounding

--- 1.0.3   10/14/15 ---
Bundle two required dlls. Not sure how legal this is.

--- 1.0.4   10/14/15 ---
Fix platform and spike collision order

--- 1.0.5   10/14/15 ---
Update in-game version number from 1.0.0 to 1.0.5

--- 1.1.0   12/4/15 ---

LOTS of small UI tweaks
Shoot / Z Saves map property
No longer skip positions if moving mouse quickly when placing or removing objects
Death counter and FPS displays
Seperate grid overlay size from grid snap size
Palette: bigger buttons, feedback when selecting, hide rarely used objects in combobox, tooltips
Menu: reorder buttons, add more icons
"Hide Sidebar" now resizes window
Button to toggle mouse coordinates
New icon
Refactor of button code
Two new easter eggs