@@ -1,15 +1,0 @@
-<html>
-  <head>
-    <title>Dotkid</title>
-    <link rel="stylesheet" href="./docstyle.css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
-  </head>
-  <body>
-    <div class="content">
-      <h1>Dotkid</h1>
-      The dotkid sprite's origin is 9 pixels above the bottom of the sprite, the same as the normal kid's sprite. Dotkid also uses the same exact code as the regular kid; no special behavior. This implementation makes platforms work consistently with dotkid, and that's why I did it this way. Note that there's no official implementation of dotkid, and that other implementations might work slightly differently than this one.
-      <script src="write_footer.js"></script>
-    </div>
-    <img class="sideimage" src="images/dotkid_origin.png">
-  </body>
-</html>
