@@ -7,8 +7,13 @@
   <body>
     <div class="content">
       <h1>Importing Skins</h1>
-      Unzip or move the skin's folder into the "skins" folder alongside the others. Next, add your skin's name to skins.ini to add it to the list the game cycles through. The name you should use is the name of the skin folder. Click the "Change Skin" button in-game until you reach your skin.
+      1. Unzip or move the skin's folder into the "skins" folder alongside the others.
+      <br>
+      2. Add your skin's name to the comma-seperated list in "skins.ini". The name you should use is the name of the skin folder.
+      <br>
+      3. The skin should be imported. Click the "Change Skin" button in jtool until you reach your skin.
       <script src="write_footer.js"></script>
     </div>
+    <img class="sideimage" src="images/skin_paintbrush.png">
   </body>
 </html>
