@@ -1,17 +1,0 @@
-<html>
-  <head>
-    <title>Startup Issues</title>
-    <link rel="stylesheet" href="./docstyle.css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
-  </head>
-  <body>
-    <div class="content">
-      <h1>Startup Issues</h1>
-      If you see a pop-up like the following, do not despair! You can download dll files you are missing from random websites. Just google the name of the dll you're missing and download it from a somewhat sketchy-looking website. dll-files.com pops up a lot. Then you can try putting the dll in the jtool folder.
-      <br><br>
-      A disclaimer: I don't know what these missing dlls are, or what the best way to obtain them is, or if the above method is safe. I just don't care to put in the effort to find out. It's frustrating to deal with. Sorry, and good luck.
-      <script src="write_footer.js"></script>
-    </div>
-    <img class="sideimage" src="images/dll_sadface.png">
-  </body>
-</html>
