@@ -6,32 +6,29 @@
   </head>
   <body>
     <div class="content">
-      <h1>jtool</h1>
-      jtool aims to be good for both investigating precise needle and designing needle stages. I made it because RMJ is such an invaluable tool in the community, yet it lacked a lot of features and was a bit quirky in my eyes. Oh, and also because I happened to have the time to do it.
+      <h1>Jtool</h1>
+      jtool aims to be a feature-rich tool for designing and testing intricate needle platforming. I made it because RMJ (I Wanna Record My Jumps) is such an invaluable tool to the fangame community, yet it lacked a lot of features and was a bit quirky in my eyes. Oh, and also because I happened to have the motivation and time to do it.
       <br><br>
-      Jtool is made by me, Patrickgh3. Please contact me with bug reports (be descriptive), feature ideas, general feedback, and love notes. I'm on Skype often as "patrickgh3", and my email is <a href="mailto:patrickjtraynor@gmail.com">patrickjtraynor@gmail.com</a>. I stream sometimes on my <a href="http://www.twitch.tv/patrickgh3">Twitch Channel</a>. I'm also on <a href="https://github.com/patrickgh3">Github</a> and maybe <a href="https://twitter.com/clockworkpat">Twitter</a> if you're into those sort of things.
+      <a href="http://www.iwannacommunity.com/forum/index.php?topic=1964.0" target="_blank">Forum thread</a>
+      <br>
+      <a href="http://github.com/patrickgh3/jtool" target="_blank">Github repo</a>
+      <br>
+      <a href="http://cwpat.me/iwanna-tools/" target="_blank">More of my fangame tools</a>
+      <br><br>
+      Jtool is made by me, Patrickgh3. Please contact me with bug reports (be descriptive), feature ideas, general feedback, and love notes. I'm on Skype often as "patrickgh3", and I stream sometimes on my <a href="http://www.twitch.tv/patrickgh3" target="_blank">Twitch channel</a>. I'm also on <a href="https://github.com/patrickgh3" target="_blank">Github</a> and maybe <a href="https://twitter.com/clockworkpat" target="_blank">Twitter</a> if you're into those sort of things.
       <br><br>
       Special thanks to: YoYoYoDude1 for his GMStudio engine, TheNewGeezer for the original RMJ, and everyone who gave feedback, feature ideas, and encouragement; you know who you are.
       <br><br>
-      <a href="http://cwpat.me/jtool">Link to forum thread</a>
-      <br><br>
-      Things are explained in these documentation pages to answer common questions and to make tinkering with the source easier.
-      <h2>For casual use</h2>
-      <a href="doc/startup_issues.html">Startup Issues</a> - Missing DLL oh no
-      <br>
-      <a href="doc/dotkid.html">Dotkid</a> - Dotkid implementation details
-      <br>
       <a href="doc/importing_skins.html">Importing Skins</a> - From the jtool black market
       <br>
       <a href="doc/making_skins.html">Making Skins</a> - Details on the skin format
-      <h2>For playing with the source</h2>
-      <a href="doc/building.html">Building</a> - Steps to set up building the project
       <br>
-      <a href="doc/map_file_format.html">Map File Format</a> - Self-explanatory
+      <a href="doc/map_file_format.html">Map File Format</a> - How to read jmap files
       <br>
-      <a href="doc/palette.html">Palette</a> - Adding custom palette objects
+      <a href="doc/building.html">Using the source code</a> - How to build the project
       <br>
       <a href="doc/draw_event_abuse.html">Draw event abuse</a> - Why multiple views don't work
     </div>
+    <img class="sideimage" src="doc/images/icon_256.png">
   </body>
 </html>
